--- a/homework1/index.html
+++ b/homework1/index.html
@@ -24,33 +24,33 @@
         console.log(num1 / num2);
         console.log(num1 * num2);
 
-        if (num1 == 5 && num2 == 8 && action == 'plus') {
-            alert("5+8=13")
+        if (action == 'plus') {
+            alert(num1 + num2)
         }
 
-        let num3 = 15;
-        let num4 = 8;
-        let action1 = 'minus';
+        num1 = 15;
+        num2 = 8;
+        action = 'minus';
 
-        if (num3 == 15 && num4 == 8 && action1 == 'minus') {
+        if (action == 'minus') {
 
-            alert("15-8=7")
+            alert(num1 - num2)
         }
 
-        let num5 = 15;
-        let num6 = 8;
-        let action2 = "multiply";
+        num1 = 15;
+        num2 = 8;
+        action = "multiply";
 
-        if (num5 == 15 && num6 == 8 && action2 == 'multiply') {
-            alert("15*8=120")
+        if (action == 'multiply') {
+            alert(num1 * num2)
 
         }
 
-        let num7 = 15;
-        let num8 = 8;
-        let action3 = 'divide';
-        if (num7 == 15 && num8 == 8 && action3 == 'divide') {
-            alert('15/8=1.875')
+        num1 = 15;
+        num2 = 8;
+        action = 'divide';
+        if (action == 'divide') {
+            alert(num1 / num2)
         }
 
 
